# mcp-paper-verification

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  README_EN.md  pyproject.toml
src/mcp_paper_verification/: __init__.py  server.py  verifier.py
tests/: test_mcp_service.py
