[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_paper_verification"
version = "0.1.0"
description = "MCP server for comprehensive academic paper verification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.4.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "bibtexparser>=1.4.0",
    "markdown>=3.5.0",
    "regex>=2023.10.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=7.0.0",
]

[project.scripts]
mcp-paper-verification = "mcp_paper_verification:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_paper_verification"] 